DataRetrieve/unpackaged/unpackaged/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Amount_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Test field for the BIS-808</description>
        <label>Amount Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Closing_Stage_Formula__c</fullName>
        <formula>CASE( Closing_Stage__c,
&quot;draft&quot;, &quot;draft&quot;,
&quot;interest&quot;, &quot;active&quot;,
&quot;active&quot;, &quot;active&quot;,
&quot;waitlist&quot;, &quot;waitlist&quot;,
&quot;funded&quot;, &quot;funded&quot;,
&quot;cashflowing&quot;, &quot;funded&quot;,
&quot;excited&quot;, &quot;funded&quot;,
&quot;draft&quot;)</formula>
        <label>Closing Stage Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closing_Stage__c</fullName>
        <description>Test field for the BIS-808</description>
        <label>Closing Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Interest</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Waitlist</fullName>
                </value>
                <value>
                    <fullName>Funded</fullName>
                </value>
                <value>
                    <fullName>Cashflowing</fullName>
                </value>
                <value>
                    <fullName>exited</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Funded__c</fullName>
        <description>Test field for the BIS-808</description>
        <label>Funded</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interested__c</fullName>
        <description>Test field for the BIS-808</description>
        <label>Interested</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Investment_Amount__c</fullName>
        <description>Test field for the BIS-808</description>
        <label>Investment Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Tertiary</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Signed__c</fullName>
        <description>Test field for the BIS-808</description>
        <label>Signed</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>BulkMessageContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <label>Bulk_SMS_Contacts</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
</CustomObject>